--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
 
     <string name="user_created">Joueur créé !</string>
     <string name="getacard_title">%1$s vous a envoyé cette carte !</string>
+    <string name="sourires">%1$s sourires</string>
 
 
 </resources>
